crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_strip_spaces_unavailable.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: Canvas board · space: Plugins · fetched 0s ago                                           "
" Enter detail · r refresh · ? help · q quit                                                                             "
"                                                    1/2                                                     Dev Done 0 ›"
"┌ Backlog (1) ─────────────────────────┐┌ Todo (1) ────────────────────────────┐┌ In Progress (1) ─────────────────────┐"
"│  WEB-3308  P0                        ││  WEB-3307  P3                        ││  WEB-3302 ▶  P2  ⧉2                  │"
"│Example issue: a panel is blank while ││Example issue: a long task stops when ││Example issue: a saved item is empty  │"
"│an item is still loading              ││its panel is closed                   ││after reload                          │"
"│@Example User                         ││unassigned                            ││@Example User                         │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"│                                      ││                                      ││                                      │"
"└──────────────────────────────────────┘└──────────────────────────────────────┘└──────────────────────────────────────┘"
" Spaces with no project · s select · t unmapped tabs                                                                    "
"  space list unavailable: plugin unavailable: herdr socket missing                                                      "
"                                                                                                                        "
