crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_two_column_100.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: Canvas board · space: Plugins · fetched 0s ago                       "
" Enter detail · r refresh · ? help · q quit                                                         "
"                                         1/3                                         In Progress 1 ›"
"┌ Backlog (1) ───────────────────────────────────┐┌ Todo (1) ──────────────────────────────────────┐"
"│  WEB-3308  P0                                  ││  WEB-3307  P3                                  │"
"│Example issue: a panel is blank while an item is││Example issue: a long task stops when its panel │"
"│still loading                                   ││is closed                                       │"
"│@Example User                                   ││unassigned                                      │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"│                                                ││                                                │"
"└────────────────────────────────────────────────┘└────────────────────────────────────────────────┘"
" Spaces with no project · s select · t unmapped tabs                                                "
"    Beta notes (wB)                                                                                 "
"    Gamma docs (wC)                                                                                 "
"                                                                                                    "
