crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_unavailable.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
" Linear  Frame Effects · view: Canvas board (unreadable) · space: Plugins · fetched 0s ago                              "
" ! Linear unavailable · view unreadable                                                                                 "
"┌ In Progress (1) ─────────────────────────────────────────────────────────────────────────────────────────────────────┐"
"│  WEB-3302  ~stale  ⧉2                                                                                                │"
"│Example issue: a saved item is empty after reload                                                                     │"
"│                                                                                                                      │"
"│unassigned                                                                                                            │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"│                                                                                                                      │"
"└──────────────────────────────────────────────────────────────────────────────────────────────────────────────────────┘"
" Spaces with no project · s select · t unmapped tabs                                                                    "
"    Beta notes (wB)                                                                                                     "
"    Gamma docs (wC)                                                                                                     "
"                                                                                                                        "
