crates/board-tui/tests/linear/snapshots/snapshots__linear__linear_unbound.snap
---
source: crates/board-tui/tests/linear/mod.rs
expression: frame
---
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"               ┌ Not bound ─────────────────────────────────────────────────────────────────────────────┐               "
"               │Space Plugins (wA) is not bound to a Linear project.                                    │               "
"               │no workspace record exists                                                              │               "
"               │                                                                                        │               "
"               │Run /work:bind in this space, then press r to refresh.                                  │               "
"               │                                                                                        │               "
"               │r refresh · q quit                                                                      │               "
"               └────────────────────────────────────────────────────────────────────────────────────────┘               "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
"                                                                                                                        "
